--- a/security/pom.xml
+++ b/security/pom.xml
@@ -32,6 +32,11 @@
 
 	<name>Gravitee IO - API Management - Security</name>
 
+	<properties>
+		<spring.security.version>3.2.8.RELEASE</spring.security.version>
+		<spring.security.oauth2.version>2.0.7.RELEASE</spring.security.oauth2.version>
+	</properties>
+
 	<dependencies>
 		<!-- Spring dependencies -->
 		<dependency>
