--- a/standalone/pom.xml
+++ b/standalone/pom.xml
@@ -41,11 +41,17 @@
 			<version>${project.version}</version>
 		</dependency>
 
-		<!-- Spring dependencies -->
+		<!-- Gravitee Repository dependencies -->
 		<dependency>
-			<groupId>org.springframework</groupId>
-			<artifactId>spring-core</artifactId>
-			<version>${spring.version}</version>
+			<groupId>io.gravitee.repositories</groupId>
+			<artifactId>gravitee-repository-mongodb</artifactId>
+			<version>1.0.0-SNAPSHOT</version>
+			<exclusions>
+				<exclusion>
+					<groupId>org.slf4j</groupId>
+					<artifactId>slf4j-log4j12</artifactId>
+				</exclusion>
+			</exclusions>
 		</dependency>
 
 		<!-- Jetty dependencies -->
@@ -54,5 +60,26 @@
 			<artifactId>jetty-webapp</artifactId>
 			<version>${jetty.version}</version>
 		</dependency>
+
+		<!-- Logging -->
+		<dependency>
+			<groupId>org.slf4j</groupId>
+			<artifactId>slf4j-api</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>ch.qos.logback</groupId>
+			<artifactId>logback-classic</artifactId>
+			<version>${logback.version}</version>
+		</dependency>
+		<dependency>
+			<groupId>ch.qos.logback</groupId>
+			<artifactId>logback-core</artifactId>
+			<version>${logback.version}</version>
+		</dependency>
 	</dependencies>
+
+	<properties>
+		<logback.version>1.1.3</logback.version>
+		<jetty.version>9.2.11.v20150529</jetty.version>
+	</properties>
 </project>
