fix(war) : Fix web.xml feat(fat jar) : create fat jar for the standalone app docs(README) : update README

--- a/war/src/main/webapp/WEB-INF/web.xml
+++ b/war/src/main/webapp/WEB-INF/web.xml
@@ -28,7 +28,7 @@
 	
 	<context-param>
 		<param-name>contextConfigLocation</param-name>
-		<param-value>io.gravitee.management.api.spring.GraviteeContextConfiguration</param-value>
+		<param-value>io.gravitee.management.api.spring.RestConfiguration</param-value>
 	</context-param>
 	
 	<context-param>
