--- a/war/pom.xml
+++ b/war/pom.xml
@@ -55,4 +55,14 @@
 			<version>${project.version}</version>
 		</dependency>
 	</dependencies>
+	
+	<build>
+		<plugins>
+			<plugin>
+				<groupId>org.eclipse.jetty</groupId>
+				<artifactId>jetty-maven-plugin</artifactId>
+				<version>9.3.2.v20150730</version>
+			</plugin>
+		</plugins>
+	</build>
 </project>
