feat(configuration): Add configuration management

--- a/rest/pom.xml
+++ b/rest/pom.xml
@@ -62,6 +62,11 @@
 			<artifactId>spring-beans</artifactId>
 			<version>${spring.version}</version>
 		</dependency>
+		<dependency>
+			<groupId>org.yaml</groupId>
+			<artifactId>snakeyaml</artifactId>
+			<version>1.15</version>
+		</dependency>
 
 		<!-- Jersey dependencies -->
 		<dependency>
