--- a/standalone/distribution/pom.xml
+++ b/standalone/distribution/pom.xml
@@ -67,6 +67,7 @@
             <plugin>
                 <artifactId>maven-assembly-plugin</artifactId>
                 <version>2.4</version>
+                <inherited>false</inherited>
                 <executions>
                     <execution>
                         <id>bin</id>
