--- a/war/pom.xml
+++ b/war/pom.xml
@@ -69,6 +69,13 @@
 				<artifactId>jetty-maven-plugin</artifactId>
 				<version>9.3.2.v20150730</version>
 			</plugin>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-war-plugin</artifactId>
+				<configuration>
+					<failOnMissingWebXml>false</failOnMissingWebXml>
+				</configuration>
+			</plugin>
 		</plugins>
 	</build>
 </project>
