refactor : Configuration yaml definition"

--- a/standalone/distribution/src/main/resources/config/gravitee.yml
+++ b/standalone/distribution/src/main/resources/config/gravitee.yml
@@ -1,10 +1,16 @@
-
 node:
   home: ${gravitee.home}
 
-plugin:
-  workspace: ${node.home}/plugins
+plugins:
+  registry:
+    path: ${gravitee.home}/plugins
 
 repository:
-  file:
-    path: ${node.home}/apis
+  type: mongodb
+  mongodb:
+    dbname: gravitee
+    host: localhost
+    port: 27017
+
+security:
+  implementation: basic-auth
