refactor: Applying a big refactoring to : - Remove gravitee-model dependency (no longer used) - Add initial implementation of Sync service - Provide an HandlerFactory - Handlers now inherits from LifecycleComponent - Provide an internal mocked implementation for Repository API

--- a/gravitee-gateway-core/src/test/resources/gravitee.yml
+++ b/gravitee-gateway-core/src/test/resources/gravitee.yml
@@ -7,5 +7,7 @@ plugin:
   workspace: ${node.home}/io/gravitee/gateway/core/plugin/workspace
 
 repository:
-  file:
-    path: ${node.home}/registry/conf
+  type: mock
+
+sync:
+  cron: '*/5 * * * * *'
