--- a/gravitee-gateway-core/pom.xml
+++ b/gravitee-gateway-core/pom.xml
@@ -33,6 +33,12 @@
 
     <name>Gravitee IO - API Management - Gateway Core</name>
 
+    <properties>
+        <gravitee-common.version>1.0.0-SNAPSHOT</gravitee-common.version>
+        <gravitee-plugin-core.version>1.0.0-SNAPSHOT</gravitee-plugin-core.version>
+        <gravitee-repository.version>1.0.0-SNAPSHOT</gravitee-repository.version>
+    </properties>
+
     <dependencies>
         <!-- Gravitee internal dependencies -->
         <dependency>
@@ -44,7 +50,19 @@
         <dependency>
             <groupId>io.gravitee.common</groupId>
             <artifactId>gravitee-common</artifactId>
-            <version>${project.version}</version>
+            <version>${gravitee-common.version}</version>
+        </dependency>
+
+        <dependency>
+            <groupId>io.gravitee.repositories</groupId>
+            <artifactId>gravitee-repository</artifactId>
+            <version>${gravitee-repository.version}</version>
+        </dependency>
+
+        <dependency>
+            <groupId>io.gravitee.plugin</groupId>
+            <artifactId>gravitee-plugin-core</artifactId>
+            <version>${gravitee-plugin-core.version}</version>
         </dependency>
 
         <dependency>
