--- a/standalone/distribution/rpm/pom.xml
+++ b/standalone/distribution/rpm/pom.xml
@@ -27,8 +27,8 @@
 
 	<artifactId>gravitee-management-api-standalone-distribution-rpm</artifactId>
 	<name>Gravitee IO - Management - Standalone - Distribution rpm</name>
-	<packaging>rpm</packaging>
-	
+	<packaging>pom</packaging>
+
 	<properties>
 		<gravitee.management.log.dir>${packaging.gravitee.management.log.dir}</gravitee.management.log.dir>
 	</properties>
@@ -44,94 +44,110 @@
 		</dependency>
 
 	</dependencies>
+	<profiles>
+		<profile>
+			<id>dist</id>
+			<build>
+				<finalName>gravitee-management-${project.version}</finalName>
+				<plugins>
+					<plugin>
+						<groupId>org.codehaus.mojo</groupId>
+						<artifactId>rpm-maven-plugin</artifactId>
+						<version>2.1.3</version>
+						<extensions>true</extensions>
+						<executions>
+							<execution>
+								<goals>
+									<goal>rpm</goal>
+								</goals>
+								<inherited>false</inherited>
+							
+								<configuration>
+									<disabled>false</disabled>
+									<name>gravitee-management</name>
+									<distribution>Gravitee.io</distribution>
+									<group>Application/Internet</group>
+									<packager>Gravitee.io</packager>
+									<prefix>/usr</prefix>
 
-	<build>
-		<finalName>gravitee-management-${project.version}</finalName>
-		<plugins>
-			<plugin>
-				<groupId>org.codehaus.mojo</groupId>
-				<artifactId>rpm-maven-plugin</artifactId>
-				<version>2.1.3</version>
-				<extensions>true</extensions>
-				<configuration>
-					<disabled>false</disabled>
-					<name>gravitee-management</name>
-					<distribution>Gravitee.io</distribution>
-					<group>Application/Internet</group>
-					<packager>Gravitee.io</packager>
-					<prefix>/usr</prefix>
+									<needarch>noarch</needarch>
+									<targetOS>linux</targetOS>
+									<changelogFile>src/changelog</changelogFile>
+									<defineStatements>
+										<defineStatement>_unpackaged_files_terminate_build 0</defineStatement>
+										<defineStatement>_binaries_in_noarch_packages_terminate_build 0</defineStatement>
+									</defineStatements>
+									<defaultFilemode>644</defaultFilemode>
+									<defaultDirmode>755</defaultDirmode>
+									<defaultUsername>root</defaultUsername>
+									<defaultGroupname>root</defaultGroupname>
+									<description>Gravitee Management.</description>
+									<mappings>
+										<!-- Add binaries -->
+										<mapping>
+											<directory>${packaging.gravitee.management.bin.dir}/</directory>
+											<configuration>noreplace</configuration>
+											<sources>
+												<source>
+													<location>../target/distribution/bin/</location>
+													<includes>
+														<include>*</include>
+													</includes>
+												</source>
+											</sources>
+										</mapping>
 
-					<needarch>noarch</needarch>
-					<targetOS>linux</targetOS>
-					<changelogFile>src/changelog</changelogFile>
-					<defineStatements>
-						<defineStatement>_unpackaged_files_terminate_build 0</defineStatement>
-						<defineStatement>_binaries_in_noarch_packages_terminate_build 0</defineStatement>
-					</defineStatements>
-					<defaultFilemode>644</defaultFilemode>
-					<defaultDirmode>755</defaultDirmode>
-					<defaultUsername>root</defaultUsername>
-					<defaultGroupname>root</defaultGroupname>
-					<description>Gravitee Management.</description>
-					<mappings>
-						<!-- Add binaries -->
-						<mapping>
-							<directory>${packaging.gravitee.management.bin.dir}/</directory>
-							<configuration>noreplace</configuration>
-							<sources>
-								<source>
-									<location>../target/distribution/bin/</location>
-									<includes>
-										<include>*</include>
-									</includes>
-								</source>
-							</sources>
-						</mapping>
+										<!-- Add configs -->
+										<mapping>
+											<directory>${packaging.gravitee.management.conf.dir}/</directory>
+											<configuration>noreplace</configuration>
+											<sources>
+												<source>
+													<location>../target/distribution/config/</location>
+													<includes>
+														<include>*.yml</include>
+														<include>*.xml</include>
+													</includes>
+													<filter>true</filter>
+												</source>
+											</sources>
+										</mapping>
 
-						<!-- Add configs -->
-						<mapping>
-							<directory>${packaging.gravitee.management.conf.dir}/</directory>
-							<configuration>noreplace</configuration>
-							<sources>
-								<source>
-									<location>../target/distribution/config/</location>
-									<includes>
-										<include>*.yml</include>
-										<include>*.xml</include>
-									</includes>
-									<filter>true</filter>
-								</source>
-							</sources>
-						</mapping>
+										<!-- Add libs -->
+										<mapping>
+											<directory>${packaging.gravitee.management.home.dir}/lib</directory>
+											<sources>
+												<source>
+													<location>../target/distribution/lib/</location>
+												</source>
+											</sources>
+										</mapping>
 
-						<!-- Add libs -->
-						<mapping>
-							<directory>${packaging.gravitee.management.home.dir}/lib</directory>
-							<sources>
-								<source>
-									<location>../target/distribution/lib/</location>
-								</source>
-							</sources>
-						</mapping>
+										<!-- Add log directory -->
+										<mapping>
+											<directory>${packaging.gravitee.management.log.dir}</directory>
+											<filemode>755</filemode>
+											<username>${packaging.gravitee.management.user}</username>
+											<groupname>${packaging.gravitee.management.group}</groupname>
+										</mapping>
 
-						<!-- Add log directory -->
-						<mapping>
-							<directory>${packaging.gravitee.management.log.dir}</directory>
-							<filemode>755</filemode>
-							<username>${packaging.gravitee.management.user}</username>
-							<groupname>${packaging.gravitee.management.group}</groupname>
-						</mapping>
+										<!-- Add plugins directory -->
+										<mapping>
+											<directory>${packaging.gravitee.management.plugins.dir}</directory>
+											<filemode>755</filemode>
+											<username>${packaging.gravitee.management.user}</username>
+											<groupname>${packaging.gravitee.management.group}</groupname>
+										</mapping>
+									</mappings>
+								</configuration>
+							</execution>
+						</executions>
+					</plugin>
+				</plugins>
+			</build>
+		</profile>
 
-						<!-- Add plugins directory -->
-						<mapping>
-							<directory>${packaging.gravitee.management.plugins.dir}</directory>
-							<filemode>755</filemode>
-							<username>${packaging.gravitee.management.user}</username>
-							<groupname>${packaging.gravitee.management.group}</groupname>
-						</mapping>
-					</mappings>
-				</configuration>
-			</plugin>
-		</plugins>
-	</build>
+	</profiles>
+
+
 </project>
