--- a/standalone/distribution/pom.xml
+++ b/standalone/distribution/pom.xml
@@ -38,6 +38,8 @@
         <packaging.gravitee.management.plugins.dir>${packaging.gravitee.management.home.dir}/plugins</packaging.gravitee.management.plugins.dir>
         <packaging.gravitee.management.conf.dir>/etc/gravitee-management</packaging.gravitee.management.conf.dir>
         <packaging.gravitee.management.log.dir>/var/log/gravitee-management</packaging.gravitee.management.log.dir>
+        <packaging.gravitee.management.pid.dir>/var/run/gravitee-management</packaging.gravitee.management.pid.dir>
+        <packaging.gravitee.management.services.dir>/etc/init.d</packaging.gravitee.management.services.dir>
 		<packaging.gravitee.management.user>gravitee</packaging.gravitee.management.user>
         <packaging.gravitee.management.group>gravitee</packaging.gravitee.management.group>
 	</properties>
