feat(plugin): PluginRegistry is now started in the same time as the reactor using lifecycle component / service

--- a/gravitee-gateway-core/src/test/resources/gravitee.yml
+++ b/gravitee-gateway-core/src/test/resources/gravitee.yml
@@ -3,8 +3,9 @@
 node:
   home: ${gravitee.home}
 
-plugin:
-  workspace: ${node.home}/io/gravitee/gateway/core/plugin/workspace
+plugins:
+  registry:
+    path: ${node.home}/io/gravitee/gateway/core/plugin/workspace
 
 repository:
   type: mock
