--- a/security/pom.xml
+++ b/security/pom.xml
@@ -38,6 +38,13 @@
 	</properties>
 
 	<dependencies>
+		<!-- Gravitee Management dependencies -->
+		<dependency>
+			<groupId>io.gravitee.management</groupId>
+			<artifactId>gravitee-management-api-service</artifactId>
+			<version>${project.version}</version>
+		</dependency>
+	
 		<!-- Spring dependencies -->
 		<dependency>
 			<groupId>org.springframework</groupId>
