--- a/standalone/distribution/rpm/pom.xml
+++ b/standalone/distribution/rpm/pom.xml
@@ -43,139 +43,183 @@
 			<type>pom</type>
 		</dependency>
 	</dependencies>
-	
-	<profiles>
-		<profile>
-			<id>dist</id>
-			<build>
-				<finalName>gravitee-management-${project.version}</finalName>
-				<plugins>
-					<plugin>
-						<groupId>org.codehaus.mojo</groupId>
-						<artifactId>rpm-maven-plugin</artifactId>
-						<version>2.1.3</version>
-						<extensions>true</extensions>
-						<executions>
-							<execution>
-								<goals>
-									<goal>rpm</goal>
-								</goals>
-								<inherited>false</inherited>
+
+	<build>
+		<finalName>gravitee-management-${project.version}</finalName>
+		<plugins>
+		
+		  <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-resources-plugin</artifactId>
+                <executions>
+                    <!-- Filters some files and uses packaging.properties when building the .rpm package -->
+                    <execution>
+                        <id>copy-resources-rpm</id>
+                        <phase>prepare-package</phase>
+                        <goals>
+                            <goal>copy-resources</goal>
+                        </goals>
+                        <configuration>
+                            <outputDirectory>${project.build.directory}/generated-packaging/rpm/</outputDirectory>
+                            <filters>
+                                <filter>${project.basedir}/../src/main/packaging/packaging.properties</filter>
+                                <!-- filter>${project.basedir}/src/main/packaging/packaging.properties</filter-->
+                            </filters>
+                            <resources>
+                                <resource>
+                                    <directory>${project.basedir}/../src/main/packaging/</directory>
+                                    <filtering>true</filtering>
+                                    <includes>
+                                        <include>**/*</include>
+                                    </includes>
+                                    <excludes>
+                                        <exclude>packaging.properties</exclude>
+                                    </excludes>
+                                </resource>
+                            </resources>
+                        </configuration>
+                    </execution>
+                </executions>
+            </plugin>
+            
+			<plugin>
+				<groupId>org.codehaus.mojo</groupId>
+				<artifactId>rpm-maven-plugin</artifactId>
+				<version>2.1.3</version>
+				<extensions>true</extensions>
+				<executions>
+					<execution>
+						<goals>
+							<goal>rpm</goal>
+						</goals>
+						<inherited>false</inherited>
+
+						<configuration>
+							<disabled>false</disabled>
+							<name>gravitee-management</name>
+							<distribution>Gravitee.io</distribution>
+							<group>Application/Internet</group>
+							<packager>Gravitee.io</packager>
+							<prefix>/usr</prefix>
+
+							<needarch>noarch</needarch>
+							<targetOS>linux</targetOS>
+							<changelogFile>src/changelog</changelogFile>
+							<defineStatements>
+								<defineStatement>_unpackaged_files_terminate_build 0</defineStatement>
+								<defineStatement>_binaries_in_noarch_packages_terminate_build 0</defineStatement>
+							</defineStatements>
+							<defaultFilemode>644</defaultFilemode>
+							<defaultDirmode>755</defaultDirmode>
+							<defaultUsername>root</defaultUsername>
+							<defaultGroupname>root</defaultGroupname>
+							<description>Gravitee Management.</description>
+							<mappings>
+
+								<!-- Add services script -->
+								<mapping>
+									<directory>${packaging.gravitee.management.services.dir}</directory>
+									<filemode>555</filemode>
+									<directoryIncluded>false</directoryIncluded>
+									<username>root</username>
+									<groupname>root</groupname>
+									<sources>
+										<source>
+											<location>src/main/resources/etc/init.d/</location>
+											<includes>
+												<include>gravitee-management</include>
+											</includes>
+											<filter>true</filter>
+										</source>
+									</sources>
+								</mapping>
+
+								<!-- Add binaries -->
+								<mapping>
+									<directory>${packaging.gravitee.management.bin.dir}/</directory>
+									<filemode>555</filemode>
+									<configuration>noreplace</configuration>
+									<sources>
+										<source>
+											<location>../target/distribution/bin/</location>
+											<includes>
+												<include>*</include>
+											</includes>
+										</source>
+									</sources>
+								</mapping>
+
+								<!-- Add configs -->
+								<mapping>
+									<directory>${packaging.gravitee.management.conf.dir}/</directory>
+									<configuration>noreplace</configuration>
+									<sources>
+										<source>
+											<location>../target/distribution/config/</location>
+											<includes>
+												<include>*.yml</include>
+												<include>*.xml</include>
+											</includes>
+											<filter>true</filter>
+										</source>
+									</sources>
+								</mapping>
+
+								<!-- Add libs -->
+								<mapping>
+									<directory>${packaging.gravitee.management.home.dir}/lib</directory>
+									<sources>
+										<source>
+											<location>../target/distribution/lib/</location>
+										</source>
+									</sources>
+								</mapping>
+
+								<!-- Add pid directory -->
+								<mapping>
+									<directory>${packaging.gravitee.management.pid.dir}</directory>
+									<filemode>755</filemode>
+									<username>${packaging.gravitee.management.user}</username>
+									<groupname>${packaging.gravitee.management.group}</groupname>
+								</mapping>
+
+								<!-- Add log directory -->
+								<mapping>
+									<directory>${packaging.gravitee.management.log.dir}</directory>
+									<filemode>755</filemode>
+									<username>${packaging.gravitee.management.user}</username>
+									<groupname>${packaging.gravitee.management.group}</groupname>
+								</mapping>
+
+								<!-- Add plugins directory -->
+								<mapping>
+									<directory>${packaging.gravitee.management.plugins.dir}</directory>
+									<filemode>755</filemode>
+									<username>${packaging.gravitee.management.user}</username>
+									<groupname>${packaging.gravitee.management.group}</groupname>
+								</mapping>
+							</mappings>
+
+							<preinstallScriptlet>
+								<scriptFile>${project.build.directory}/generated-packaging/rpm/scripts/preinst</scriptFile>
+								<fileEncoding>utf-8</fileEncoding>
+							</preinstallScriptlet>
+
+							<preremoveScriptlet>
+								<scriptFile>${project.build.directory}/generated-packaging/rpm/scripts/prerm</scriptFile>
+								<fileEncoding>utf-8</fileEncoding>
+							</preremoveScriptlet>
 							
-								<configuration>
-									<disabled>false</disabled>
-									<name>gravitee-management</name>
-									<distribution>Gravitee.io</distribution>
-									<group>Application/Internet</group>
-									<packager>Gravitee.io</packager>
-									<prefix>/usr</prefix>
-
-									<needarch>noarch</needarch>
-									<targetOS>linux</targetOS>
-									<changelogFile>src/changelog</changelogFile>
-									<defineStatements>
-										<defineStatement>_unpackaged_files_terminate_build 0</defineStatement>
-										<defineStatement>_binaries_in_noarch_packages_terminate_build 0</defineStatement>
-									</defineStatements>
-									<defaultFilemode>644</defaultFilemode>
-									<defaultDirmode>755</defaultDirmode>
-									<defaultUsername>root</defaultUsername>
-									<defaultGroupname>root</defaultGroupname>
-									<description>Gravitee Management.</description>
-									<mappings>
-									
-										<!-- Add services script -->
-										<mapping>
-											<directory>${packaging.gravitee.management.services.dir}</directory>
-											<filemode>555</filemode>
-											<directoryIncluded>false</directoryIncluded>
-										 	<username>root</username>
-        									<groupname>root</groupname>
-											<sources>
-												<source>
-													<location>src/main/resources/etc/init.d/</location>
-													<includes>
-														<include>gravitee-management</include>
-													</includes>
-													<filter>true</filter>
-												</source>
-											</sources>
-										</mapping>
-										
-										<!-- Add binaries -->
-										<mapping>
-											<directory>${packaging.gravitee.management.bin.dir}/</directory>
-											<filemode>555</filemode>
-											<configuration>noreplace</configuration>
-											<sources>
-												<source>
-													<location>../target/distribution/bin/</location>
-													<includes>
-														<include>*</include>
-													</includes>
-												</source>
-											</sources>
-										</mapping>
-
-										<!-- Add configs -->
-										<mapping>
-											<directory>${packaging.gravitee.management.conf.dir}/</directory>
-											<configuration>noreplace</configuration>
-											<sources>
-												<source>
-													<location>../target/distribution/config/</location>
-													<includes>
-														<include>*.yml</include>
-														<include>*.xml</include>
-													</includes>
-													<filter>true</filter>
-												</source>
-											</sources>
-										</mapping>
-
-										<!-- Add libs -->
-										<mapping>
-											<directory>${packaging.gravitee.management.home.dir}/lib</directory>
-											<sources>
-												<source>
-													<location>../target/distribution/lib/</location>
-												</source>
-											</sources>
-										</mapping>
-										
-										<!-- Add pid directory -->
-										<mapping>
-											<directory>${packaging.gravitee.management.pid.dir}</directory>
-											<filemode>755</filemode>
-											<username>${packaging.gravitee.management.user}</username>
-											<groupname>${packaging.gravitee.management.group}</groupname>
-										</mapping>
-
-										<!-- Add log directory -->
-										<mapping>
-											<directory>${packaging.gravitee.management.log.dir}</directory>
-											<filemode>755</filemode>
-											<username>${packaging.gravitee.management.user}</username>
-											<groupname>${packaging.gravitee.management.group}</groupname>
-										</mapping>
-
-										<!-- Add plugins directory -->
-										<mapping>
-											<directory>${packaging.gravitee.management.plugins.dir}</directory>
-											<filemode>755</filemode>
-											<username>${packaging.gravitee.management.user}</username>
-											<groupname>${packaging.gravitee.management.group}</groupname>
-										</mapping>
-									</mappings>
-								</configuration>
-							</execution>
-						</executions>
-					</plugin>
-				</plugins>
-			</build>
-		</profile>
-
-	</profiles>
+							<postremoveScriptlet>
+								<scriptFile>${project.build.directory}/generated-packaging/rpm/scripts/postrm</scriptFile>
+								<fileEncoding>utf-8</fileEncoding>
+							</postremoveScriptlet>
+						</configuration>
+					</execution>
+				</executions>
+			</plugin>
+		</plugins>
+	</build>
 
 
 </project>
