--- a/standalone/container/pom.xml
+++ b/standalone/container/pom.xml
@@ -44,7 +44,7 @@
         <dependency>
             <groupId>io.gravitee.repositories</groupId>
             <artifactId>gravitee-repository-mongodb</artifactId>
-            <version>1.0.0-SNAPSHOT</version>
+            <version>${project.version}</version>
             <exclusions>
                 <exclusion>
                     <groupId>org.slf4j</groupId>
@@ -59,6 +59,11 @@
                     <artifactId>spring-expression</artifactId>
                 </exclusion>
             </exclusions>
+        </dependency>
+        <dependency>
+            <groupId>io.gravitee.repositories</groupId>
+            <artifactId>gravitee-repository-jpa</artifactId>
+            <version>${project.version}</version>
         </dependency>
 
         <!-- Jetty dependencies -->
