--- a/war/pom.xml
+++ b/war/pom.xml
@@ -60,6 +60,11 @@
         		</exclusion>
     		</exclusions>
 		</dependency>
+		<dependency>
+			<groupId>io.gravitee.repositories</groupId>
+			<artifactId>gravitee-repository-jpa</artifactId>
+			<version>${project.version}</version>
+		</dependency>
 	</dependencies>
 	
 	<build>
