refactor: change plugin name to gravitee-reporter-file

--- a/src/main/resources/plugin.properties
+++ b/src/main/resources/plugin.properties
@@ -2,5 +2,5 @@ id=${project.artifactId}
 name=${project.name}
 version=${project.version}
 description=${project.description}
-class=io.gravitee.reporters.access.file.AsyncAccessLogReporter
+class=io.gravitee.reporter.file.AsyncFileReporter
 type=reporter
