--- a/pom.xml
+++ b/pom.xml
@@ -27,11 +27,11 @@
 	</parent>
 
 	<groupId>io.gravitee</groupId>
-	<artifactId>gravitee-reporter-accesslog</artifactId>
+	<artifactId>gravitee-reporter-file</artifactId>
 	<version>1.0.0-SNAPSHOT</version>
 	<packaging>jar</packaging>
 
-	<name>Gravitee IO - Gateway Access log reporter</name>
+	<name>Gravitee IO - Gateway File Reporter</name>
 
 	<properties>
 		<junit.version>4.12</junit.version>
