--- a/pom.xml
+++ b/pom.xml
@@ -27,7 +27,7 @@
         <version>1.0.0-SNAPSHOT</version>
     </parent>
 
-    <groupId>io.gravitee.repositories</groupId>
+    <groupId>io.gravitee.repository</groupId>
     <artifactId>gravitee-repository</artifactId>
     <version>1.0.0-SNAPSHOT</version>
     <name>Gravitee IO - API Management - Repository API</name>
