refactor: Renamed groupId from io.gravitee.repositories to io.gravitee.repository

--- a/gravitee-gateway-core/pom.xml
+++ b/gravitee-gateway-core/pom.xml
@@ -54,7 +54,7 @@
         </dependency>
 
         <dependency>
-            <groupId>io.gravitee.repositories</groupId>
+            <groupId>io.gravitee.repository</groupId>
             <artifactId>gravitee-repository</artifactId>
             <version>${gravitee-repository.version}</version>
         </dependency>
