refactor: Renamed groupId from io.gravitee.repositories to io.gravitee.repository

--- a/service/pom.xml
+++ b/service/pom.xml
@@ -41,7 +41,7 @@
 	<dependencies>
 		<!-- GraviteeIO dependencies-->
 		<dependency>
-			<groupId>io.gravitee.repositories</groupId>
+			<groupId>io.gravitee.repository</groupId>
 			<artifactId>gravitee-repository</artifactId>
 			<version>${gravitee-repository.version}</version>
 		</dependency>
