--- a/standalone/container/pom.xml
+++ b/standalone/container/pom.xml
@@ -66,10 +66,20 @@
             <version>${project.version}</version>
         </dependency>
 
-        <!-- Jetty dependencies -->
+        <!-- Jetty -->
         <dependency>
             <groupId>org.eclipse.jetty</groupId>
             <artifactId>jetty-webapp</artifactId>
+            <version>${jetty.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>org.eclipse.jetty</groupId>
+            <artifactId>jetty-servlets</artifactId>
+            <version>${jetty.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>org.eclipse.jetty</groupId>
+            <artifactId>jetty-jmx</artifactId>
             <version>${jetty.version}</version>
         </dependency>
 
