feat(repository): Repository are now scoped : management / ratelimit / ...

--- a/gravitee-gateway-core/src/test/resources/gravitee.yml
+++ b/gravitee-gateway-core/src/test/resources/gravitee.yml
@@ -7,7 +7,7 @@ plugins:
   registry:
     path: ${node.home}/io/gravitee/gateway/core/plugin/workspace
 
-repository:
+management:
   type: mock
 
 sync:
