feat(repository): Repository are now scoped : management / ratelimit / ...

--- a/standalone/distribution/src/main/resources/config/gravitee.yml
+++ b/standalone/distribution/src/main/resources/config/gravitee.yml
@@ -5,7 +5,7 @@ plugins:
   registry:
     path: ${gravitee.home}/plugins
 
-repository:
+management:
   type: mongodb
   mongodb:
     dbname: gravitee
