--- a/war/pom.xml
+++ b/war/pom.xml
@@ -57,6 +57,10 @@
         	    	<groupId>org.springframework</groupId>
             		<artifactId>spring-expression</artifactId>
         		</exclusion>
+				<exclusion>
+					<groupId>org.slf4j</groupId>
+					<artifactId>slf4j-log4j12</artifactId>
+				</exclusion>
     		</exclusions>
 		</dependency>
 		<dependency>
