--- a/bower.json
+++ b/bower.json
@@ -11,8 +11,8 @@
     "angular-drag-and-drop-lists": "~1.2.0",
     "angular-markdown-directive": "~0.3.1",
     "angular-swagger-ui": "~0.2.3",
-    "bootstrap": "3.3.5",
-    "jquery": "~2.1.4"
+    "jquery": "~2.1.4",
+    "bootstrap-sass": "3.3.5"
   },
   "devDependencies": {
     "angular-mocks": "~1.4.0"
