feat(definition): Rest API is now able to handle properly JSON API definition

--- a/model/pom.xml
+++ b/model/pom.xml
@@ -38,6 +38,13 @@
 	</properties>
 
 	<dependencies>
+		<!-- Gravitee.io dependencies -->
+		<dependency>
+			<groupId>io.gravitee.definition</groupId>
+			<artifactId>gravitee-definition-model</artifactId>
+			<version>${gravitee-definition.version}</version>
+		</dependency>
+
 		<!-- Jackson dependencies -->
 		<dependency>
 			<groupId>com.fasterxml.jackson.core</groupId>
