--- a/pom.xml
+++ b/pom.xml
@@ -61,7 +61,8 @@
 	</dependencies>
 
 	<properties>
-		<gravitee-common.version>1.0.0-SNAPSHOT</gravitee-common.version>
+		<gravitee-common.version>0.1.0-SNAPSHOT</gravitee-common.version>
+		<gravitee-definition.version>0.1.0-SNAPSHOT</gravitee-definition.version>
 		<javax.servlet-api.version>3.1.0</javax.servlet-api.version>
 	</properties>
 </project>
