--- a/rest/pom.xml
+++ b/rest/pom.xml
@@ -37,7 +37,13 @@
 	</properties>
 
 	<dependencies>
-		<!-- Gravitee dependencies -->
+		<!-- Gravitee.io dependencies -->
+		<dependency>
+			<groupId>io.gravitee.definition</groupId>
+			<artifactId>gravitee-definition-jackson</artifactId>
+			<version>${gravitee-definition.version}</version>
+		</dependency>
+
 		<dependency>
 			<groupId>io.gravitee.common</groupId>
 			<artifactId>gravitee-common</artifactId>
