--- a/pom.xml
+++ b/pom.xml
@@ -24,7 +24,7 @@
     <parent>
         <groupId>io.gravitee</groupId>
         <artifactId>gravitee-parent</artifactId>
-        <version>1.0.0-SNAPSHOT</version>
+        <version>1</version>
     </parent>
 
     <groupId>io.gravitee.definition</groupId>
