--- a/pom.xml
+++ b/pom.xml
@@ -23,7 +23,7 @@
 	<parent>
 		<groupId>io.gravitee</groupId>
 		<artifactId>gravitee-parent</artifactId>
-		<version>1</version>
+		<version>2-SNAPSHOT</version>
 	</parent>
 
 	<groupId>io.gravitee.repository</groupId>
